сделал сетку из гридов

--- a/catalog.html
+++ b/catalog.html
@@ -4,10 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Техномарт</title>
-    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap"
-      rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Cuprum:ital,wght@0,400;0,700;1,400;1,700&display=swap"
-      rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cuprum&family=PT+Sans&display=swap" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
@@ -16,10 +13,10 @@
     <header class="main-header">
       <section class="main-menu">
         <a>
-          <img src="img/logo-technomart.png" width="108" height="18">
+          <img src="img/logo-technomart.png" width="108" height="18" alt="ТЕХНОМАРТ"> 
         </a>
         <ul class="main-menu-items">
-          <li>
+          <li class="item-search">
             <a href="#">
               <svg height="17" width="17">
                 <use xlink:href="#search"></use>
@@ -27,7 +24,7 @@
             </a>
             <span ><input type="search" placeholder="Поиск"></span>
           </li>
-          <li>
+          <li class="item-bookmark">
             <a href="#">
               <svg height="14" width="15">
                 <use xlink:href="#bookmark"></use>
@@ -36,7 +33,7 @@
             </a>
   
           </li>
-          <li>
+          <li class="item-cart">
             <a href="#">
               <svg height="17" width="17">
                 <use xlink:href="#cart"></use>
