поправил по замечаниям

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
       </ul>
     </section>
     <section class="products">
-      <div class="heder-items">
+      <div class="header-items">
         <h2>популярные товары:</h2>
         <p class="button">все популярные товары</p>
       </div>
@@ -190,7 +190,7 @@
     </div>
     </section>
     <section class="firms">
-      <div class="heder-items">
+      <div class="header-items">
         <h2>популярные производители:</h2>
         <p class="button">все производители</p>
       </div>
