--- a/catalog.html
+++ b/catalog.html
@@ -11,70 +11,75 @@
   
   <body class="page-body">
     <header class="main-header">
-      <section class="main-menu">
-        <a>
-          <img src="img/logo-technomart.png" width="108" height="18" alt="ТЕХНОМАРТ"> 
-        </a>
-        <ul class="main-menu-items">
-          <li class="item-search">
-            <a href="#">
-              <svg height="17" width="17">
-                <use xlink:href="#search"></use>
-              </svg>
+      <div class="main-container">
+        <div class="main-container-wrapper">
+          <section class="main-menu">
+            <a>
+              <img src="img/logo-technomart.png" width="108" height="18" alt="ТЕХНОМАРТ">
             </a>
-            <span ><input type="search" placeholder="Поиск"></span>
-          </li>
-          <li class="item-bookmark">
-            <a href="#">
-              <svg height="14" width="15">
-                <use xlink:href="#bookmark"></use>
-              </svg>
-              <span> Закладки: 0</span>
-            </a>
+            <ul class="main-menu-items">
+              <li class="item-search">
+                <a href="#">
+                  <svg height="17" width="17">
+                    <use xlink:href="#search"></use>
+                  </svg>
+                </a>
+                <span><input type="search" placeholder="Поиск"></span>
+              </li>
+              <li class="item-bookmark">
+                <a href="#">
+                  <svg height="14" width="15">
+                    <use xlink:href="#bookmark"></use>
+                  </svg>
+                  <span> Закладки: 0</span>
+                </a>
   
-          </li>
-          <li class="item-cart">
-            <a href="#">
-              <svg height="17" width="17">
-                <use xlink:href="#cart"></use>
-              </svg>
-              <span>Корзина: 0</span>
-            </a>
-          </li>
-        </ul>
-        <a class="menu-button" href="#">Оформить заказ</a>
-      </section>
-  
-      <section class="main-info">
-        <i>Интернет-магазин строительных материалов и инструментов для ремонта</i>
-        <p class="main-contacts">
-          <span><a href="tel:+78125550555"><svg height="17" width="19">
-                <use xlink:href="#phone"></use>
-              </svg> +7(812)555-05-55 </a></span>
-        </p>
-        <span>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</span>
-        <p class="main-login">
-          <a href="#">
-            <svg height="17" width="20">
-              <use xlink:href="#login"></use>
-            </svg> Войти</a>
-          <a href="#">
-            Регистрация</a>
-        </p>
-      </section>
-  
-  
-      <nav class="main-navigation">
-        <ul class="site-navigation">
-          <li><a href="#">Главная</a></li>
-          <li><a href="#">Компания</a></li>
-          <li><a href="#">Каталог</a></li>
-          <li><a href="#">Новости</a></li>
-          <li><a href="#">Спецпредложения</a></li>
-          <li><a href="#">Доставка</a></li>
-          <li><a href="#">Контакты</a></li>
-        </ul>
-      </nav>
+              </li>
+              <li class="item-cart">
+                <a href="#">
+                  <svg height="17" width="17">
+                    <use xlink:href="#cart"></use>
+                  </svg>
+                  <span>Корзина: 0</span>
+                </a>
+              </li>
+            </ul>
+            <a class="menu-button" href="#">Оформить заказ</a>
+          </section>
+        </div>
+        <div class="main-info-wrapper">
+          <section class="main-info">
+            <i>Интернет-магазин строительных материалов и инструментов для ремонта</i>
+            <p class="main-contacts">
+              <span><a href="tel:+78125550555"><svg height="17" width="19">
+                    <use xlink:href="#phone"></use>
+                  </svg> +7(812)555-05-55 </a></span>
+            </p>
+            <span>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</span>
+            <p class="main-login">
+              <a href="#">
+                <svg height="17" width="20">
+                  <use xlink:href="#login"></use>
+                </svg> Войти</a>
+              <a href="#">
+                Регистрация</a>
+            </p>
+          </section>
+        </div>
+        <div class="main-navigation-wrapper">
+          <nav class="main-navigation">
+            <ul class="site-navigation">
+              <li><a href="#">Главная</a></li>
+              <li><a href="#">Компания</a></li>
+              <li><a href="#">Каталог</a></li>
+              <li><a href="#">Новости</a></li>
+              <li><a href="#">Спецпредложения</a></li>
+              <li><a href="#">Доставка</a></li>
+              <li><a href="#">Контакты</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
     </header>
 
   <main class="container">
@@ -103,44 +108,43 @@
       <button class="button" type="button">вниз</button>
     </section>
     <section class="products">
+      <div class="products-items-wrapper">
       <ul class="products-items">
         <li class="products-item">
           <a href="#">
-            <h3>Перфоратор BOSCH BFG 6000</h3>
-            <p>30500 Р.</p>
             <p>
               <img src="img/bfg6000.png" width="184" height="164" alt="Перфоратор BOSCH BFG 6000">
             </p>
+            <h3>Перфоратор BOSCH BFG 6000</h3>
+            <p>30500 Р.</p>
             <span>25500 Р.</span>
           </a>
         </li>
         <li class="products-item">
           <a href="#">
+            <img src="img/bfg6000.png" width="184" height="164" alt="Перфоратор BOSCH BFG 6000">
             <h3>Перфоратор BOSCH BFG 6000</h3>
             <p>30500 Р.</p>
-            <p>
-              <img src="img/bfg6000.png" width="184" height="164" alt="Перфоратор BOSCH BFG 6000">
-            </p>
             <span>25500 Р.</span>
           </a>
         </li>
         <li class="products-item">
           <a href="#">
-            <h3>Перфоратор BOSCH BFG 3000</h3>
-            <P>22500 Р.</P>
             <p>
               <img src="img/bfg3000.png" width="184" height="164" alt="Перфоратор BOSCH BFG 3000">
             </p>
+            <h3>Перфоратор BOSCH BFG 3000</h3>
+            <P>22500 Р.</P>
             <span>15500 Р.</span>
           </a>
         </li>
         <li class="products-item">
           <a href="#">
-            <h3>Перфоратор BOSCH BFG 6000</h3>
-            <p>30500 Р.</p>
             <p>
               <img src="img/bfg6000.png" width="184" height="164" alt="Перфоратор BOSCH BFG 6000">
             </p>
+            <h3>Перфоратор BOSCH BFG 6000</h3>
+            <p>30500 Р.</p>
             <span>25500 Р.</span>
           </a>
         </li>
@@ -155,21 +159,21 @@
         </li>
         <li class="products-item">
           <a href="#">
-            <h3>Перфоратор BOSCH BFG 3000</h3>
-            <P>22500 Р.</P>
             <p>
               <img src="img/bfg3000.png" width="184" height="164" alt="Перфоратор BOSCH BFG 3000">
             </p>
+            <h3>Перфоратор BOSCH BFG 3000</h3>
+            <P>22500 Р.</P>
             <span>15500 Р.</span>
           </a>
         </li>
         <li class="products-item">
           <a href="#">
-            <h3>Перфоратор BOSCH BFG 6000</h3>
-            <p>30500 Р.</p>
             <p>
               <img src="img/bfg6000.png" width="184" height="164" alt="Перфоратор BOSCH BFG 6000">
             </p>
+            <h3>Перфоратор BOSCH BFG 6000</h3>
+            <p>30500 Р.</p>
             <span>25500 Р.</span>
           </a>
         </li>
@@ -179,7 +183,7 @@
             <p>
               <img src="img/bfg2000.png" width="184" height="164" alt="Перфоратор BOSCH BFG 2000">
             </p>
-            <p>12500 Р.</p>
+            <span>12500 Р.</span>
           </a>
         </li>
         <li class="products-item">
@@ -192,6 +196,7 @@
           </a>
         </li>
       </ul>
+    </div>
     </section>
     <section class="pagination-list">
       <ul class="pagination-list">
@@ -219,9 +224,10 @@
   </main>
 
   <footer class="page-footer main-footer">
+    <div class="page-footer-wrapper">
     <section class="footer-info">
-      <img src="img/footer-logo.png" width="220" height="68" alt="логотип">
       <section class="footer-contacts">
+        <img src="img/footer-logo.png" width="220" height="68" alt="логотип">
         <p>
           г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br>
           +7 (812) 555-05-55
@@ -244,9 +250,9 @@
       </section>
     </section>
     <section class="footer-bottom">
-      <p>
+      <span>
         © 2010–2019 Компания «Техномарт»Все права защищены
-      </p>
+      </span>
 
       <section class="footer-social">
         <ul>
@@ -261,6 +267,7 @@
           </li>
         </ul>
       </section>
+      <div>
       <p class="footer-copyright">
         Обратная связь: <br>
         <a href="mail@htmlacademy.ru">mail@htmlacademy.ru</a>
@@ -269,7 +276,9 @@
         Разработано - <br>
         <a href="https://htmlacademy.ru">https://htmlacademy.ru</a>
       </p>
+    </div>
     </section>
+  </div>
 
   </footer>
   <section class="modal">
