--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="main-container">
       <div class="main-container-wrapper">
         <section class="main-menu">
-          <a class="main-menu-logo">
+          <a>
             <img src="img/logo-technomart.png" width="108" height="18" alt="ТЕХНОМАРТ">
           </a>
           <ul class="main-menu-items">
@@ -53,14 +53,12 @@
       <div class="main-info-wrapper">
         <section class="main-info">
           <i>Интернет-магазин строительных материалов и инструментов для ремонта</i>
-          <div class="main-info-container">
-            <p class="main-contacts">
-              <span><a href="tel:+78125550555"><svg height="17" width="19">
-                    <use xlink:href="#phone"></use>
-                  </svg> +7(812)555-05-55 </a></span>
-            </p>
-            <span>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</span>
-          </div>
+          <p class="main-contacts">
+            <span><a href="tel:+78125550555"><svg height="17" width="19">
+                  <use xlink:href="#phone"></use>
+                </svg> +7(812)555-05-55 </a></span>
+          </p>
+          <span>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</span>
           <p class="main-login">
             <a href="#">
               <svg height="17" width="20">
@@ -88,117 +86,108 @@
   </header>
 
   <main class="container">
-    <div class="container-wrapper">
     <section class="features">
       <ul class="features-list">
         <li class="feature-item feature-item-materials">
-          <div class="feature-item-block">
-            <h3>Материалы</h3>
-            <p>на любой вкус</p>
-          </div>
+          <h3>Материалы</h3>
+          <p>на любой вкус</p>
           <svg height="65" width="44">
             <use xlink:href="#materials"></use>
           </svg>
         </li>
         <li class="feature-item feature-item-drill">
-          <div class="feature-item-block">
-            <h3>Инструменты</h3>
-            <p>на все случаи</p>
-          </div>
+          <h3>Инструменты</h3>
+          <p>на все случаи</p>
           <svg height="61" width="75">
             <use xlink:href="#drill"></use>
           </svg>
         </li>
         <li class="feature-item feature-item-tractor">
-          <div class="feature-item-block">
-            <h3>Техника</h3>
-            <p>для стройки</p>
-          </div>
+          <h3>Техника</h3>
+          <p>для стройки</p>
           <svg height="62" width="78">
             <use xlink:href="#tractor"></use>
           </svg>
         </li>
         <li class="feature-item feature-item-truck">
-          <div class="feature-item-block">
-            <h3>Скидка 50%</h3>
-            <p>на 350 товаров</p>
-          </div>
+          <h3>Скидка 50%</h3>
+          <p>на 350 товаров</p>
           <svg height="71" width="59">
             <use xlink:href="#truck"></use>
           </svg>
         </li>
         <li class="feature-item feature-item-car">
-          <div class="feature-item-block">
-            <h3>Доставка</h3>
-            <p>бесплатно</p>
-          </div>
+          <h3>Доставка</h3>
+          <p>бесплатно</p>
           <svg height="63" width="78">
             <use xlink:href="#car"></use>
           </svg>
         </li>
         <li class="slider-item">
           <section class="slider">
-            <div class="slider-list">
-              <h3>ПЕРФОРАТОРЫ</h3>
-              <span>Настоящие мужские игрушки</span>
-            </div>
-            <div class="slider-button">
-              <button class="slider-button slider-button-back" type="button" disabled>Назад</button>
-              <button class="slider-button slider-button-next" type="button">Вперед</button>
-            </div>
-            <a class="button" href="#">открыть каталог</a>
+            <ul class="slider-list">
+              <li class="slider-item">
+                <h3>ПЕРФОРАТОРЫ</h3>
+                <p>Настоящие мужские игрушки</p>
+                <a href="#">
+                  <img src="img/perforators.png" width="620" height="266" alt="Перфораторы">
+                </a>
+                <a class="button" href="#">открыть каталог</a>
+              </li>
+            </ul>
+            <button class="slider-button slider-button-back" type="button" disabled>Назад</button>
+            <button class="slider-button slider-button-next" type="button">Вперед</button>
           </section>
         </li>
       </ul>
     </section>
     <section class="products">
       <div class="header-items">
-        <h3>популярные товары:</h3>
+        <h2>популярные товары:</h2>
         <p class="button">все популярные товары</p>
       </div>
       <div class="products-items-wrapper">
-        <ul class="products-items">
-          <li class="products-item">
-            <a href="#" class="product-inner">
-              <img src="img/bfg9000.png" width="184" height="164" alt="Перфоратор BOSCH BFG 9000">
-              <div>
-                <h3>Перфоратор BOSCH BFG 9000</h3>
-                <p>32500 Р.</p>
-                <span>25500 Р.</span>
-              </div>
-            </a>
-          </li>
-          <li class="products-item">
-            <a href="#" class="product-inner">
-              <img src="img/bfg3000.png" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
-              <div>
-                <h3>Перфоратор BOSCH BFG 3000</h3>
-                <P>22500 Р.</P>
-                <span>15500 Р.</span>
-              </div>
-            </a>
-          </li>
-          <li class="products-item">
-            <a href="#" class="product-inner">
-              <img src="img/bfg6000.png" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
-              <div>
-                <h3>Перфоратор BOSCH BFG 6000</h3>
-                <p>30500 Р.</p>
-                <span>25500 Р.</span>
-              </div>
-            </a>
-          </li>
-          <li class="products-item">
-            <a href="#" class="product-inner">
-              <img src="img/bfg2000.png" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
-              <div>
-                <h3>Перфоратор BOSCH BFG 2000</h3>
-                <span>12500 Р.</span>
-              </div>
-            </a>
-          </li>
-        </ul>
-      </div>
+      <ul class="products-items">
+        <li class="products-item">
+          <a href="#">
+            <img src="img/bfg9000.png" width="184" height="164" alt="Перфоратор BOSCH BFG 9000">
+
+            <h3>Перфоратор BOSCH BFG 9000</h3>
+            <p>32500 Р.</p>
+            <span>25500 Р.</span>
+          </a>
+        </li>
+        <li class="products-item">
+          <a href="#">
+
+            <img src="img/bfg3000.png" width="184" height="164" alt="Перфоратор BOSCH BFG 3000">
+
+            <h3>Перфоратор BOSCH BFG 3000</h3>
+            <P>22500 Р.</P>
+            <span>15500 Р.</span>
+          </a>
+        </li>
+        <li class="products-item">
+          <a href="#">
+
+            <img src="img/bfg6000.png" width="184" height="164" alt="Перфоратор BOSCH BFG 6000">
+
+            <h3>Перфоратор BOSCH BFG 6000</h3>
+            <p>30500 Р.</p>
+            <span>25500 Р.</span>
+          </a>
+        </li>
+        <li class="products-item">
+          <a href="#">
+
+            <img src="img/bfg2000.png" width="184" height="164" alt="Перфоратор BOSCH BFG 2000">
+
+            <h3>Перфоратор BOSCH BFG 2000</h3>
+            <span>12500 Р.</span>
+          </a>
+        </li>
+      </ul>
+    </div>
     </section>
     <section class="firms">
       <div class="header-items">
@@ -206,17 +195,17 @@
         <p class="button">все производители</p>
       </div>
       <div class="firms-items-wrapper">
-        <ul class="firms-items">
-          <li class="firms-item"> <img src="img/bosch.png" width="220" height="145" alt="BOSCH"></li>
-          <li class="firms-item"> <img src="img/makita.png" width="220" height="145" alt="makita"></li>
-          <li class="firms-item"> <img src="img/dewalt.png" width="220" height="145" alt="dewalt"></li>
-          <li class="firms-item"> <img src="img/interkom.png" width="220" height="145" alt="interkom"></li>
-          <li class="firms-item"> <img src="img/hitachi.png" width="220" height="145" alt="hitachi"></li>
-          <li class="firms-item"> <img src="img/lg.png" width="220" height="145" alt="aeg"></li>
-          <li class="firms-item"> <img src="img/aeg.png" width="220" height="145" alt="aeg"></li>
-          <li class="firms-item"> <img src="img/metabo.png" width="220" height="145" alt="metabo"></li>
-        </ul>
-      </div>
+      <ul class="firms-items">
+        <li class="firms-item"> <img src="img/bosch.png" width="220" height="145" alt="BOSCH"></li>
+        <li class="firms-item"> <img src="img/makita.png" width="220" height="145" alt="makita"></li>
+        <li class="firms-item"> <img src="img/dewalt.png" width="220" height="145" alt="dewalt"></li>
+        <li class="firms-item"> <img src="img/interkom.png" width="220" height="145" alt="interkom"></li>
+        <li class="firms-item"> <img src="img/hitachi.png" width="220" height="145" alt="hitachi"></li>
+        <li class="firms-item"> <img src="img/lg.png" width="220" height="145" alt="aeg"></li>
+        <li class="firms-item"> <img src="img/aeg.png" width="220" height="145" alt="aeg"></li>
+        <li class="firms-item"> <img src="img/metabo.png" width="220" height="145" alt="metabo"></li>
+      </ul>
+    </div>
 
     </section>
     <section class="services">
@@ -226,16 +215,18 @@
           Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
       </div>
       <div>
-        <form class="services-form">
-          <input type="radio" name="service" id="delivery-field" checked>
-          <label for="delivery-field">Доставка</label>
-          <input type="radio" name="service" id="guarantee-field">
-          <label for="guarantee-field">Гарантия</label>
-          <input type="radio" name="service" id="credit-field">
-          <label for="credit-field">Кредит</label>
-        </form>
-      </div>
+      <form class="services-form">
+        <input type="radio" name="service" id="delivery-field" checked>
+        <label for="delivery-field">Доставка</label>
 
+        <input type="radio" name="service" id="guarantee-field">
+        <label for="guarantee-field">Гарантия</label>
+
+        <input type="radio" name="service" id="credit-field">
+        <label for="credit-field">Кредит</label>
+      </form>
+    </div>
+     
       <div class="service-block service-block-delivery">
         <h3>ДОСТАВКА</h3>
         <p>Мы с удовольствием доставим ваш товар прямо <br>
@@ -285,75 +276,69 @@
         <h2>контакты</h2>
         <p>Вы можете забрать товар сами, <br>
           заехав в наш офис:</p>
-       <div class="company-contacts-wrapper">
         <img src="img/map.png" width="300" height="158" alt="карта">
         <button class="button" type="button">Заблудились? Напишите НАМ!</button>
       </div>
-      </div>
     </section>
-  </div>
+
   </main>
 
   <footer class="page-footer main-footer">
     <div class="page-footer-wrapper">
-      <div class="page-info-wrapper">
-      <section class="footer-info">
-        <section class="footer-contacts">
-          <img src="img/footer-logo.png" width="220" height="68" alt="логотип">
-          <p>
-            г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br>
-            +7 (812) 555-05-55
-          </p>
-        </section>
-        <section class="footer-navigation">
-          <ul class="navigation-wrapper">
-            <li><a href="#">Компания</a></li>
-            <li><a href="#">Новости</a></li>
-            <li><a href="#">Каталог</a></li>
-            <li><a href="#">Доставка</a></li>
-            <li><a href="#">Контакты</a></li>
-          </ul>
-          <ul class="products-wrapper">
-            <li><a href="#">Материалы</a></li>
-            <li><a href="#">Техника</a></li>
-            <li><a href="#">Инструменты</a></li>
-            <li><a href="#">Спецпредложения</a></li>
-          </ul>
-        </section>
+    <section class="footer-info">
+      <section class="footer-contacts">
+        <img src="img/footer-logo.png" width="220" height="68" alt="логотип">
+        <p>
+          г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br>
+          +7 (812) 555-05-55
+        </p>
       </section>
-    </div>
-      <section class="footer-bottom">
-        <div class="footer-bottom-wrapper">
-        <span>
-          © 2010–2019 Компания «Техномарт»Все права защищены
-        </span>
+      <section class="footer-navigation">
+        <ul>
+          <li><a href="#">Компания</a></li>
+          <li><a href="#">Новости</a></li>
+          <li><a href="#">Каталог</a></li>
+          <li><a href="#">Доставка</a></li>
+          <li><a href="#">Контакты</a></li>
+        </ul>
+        <ul>
+          <li><a href="#">Материалы</a></li>
+          <li><a href="#">Техника</a></li>
+          <li><a href="#">Инструменты</a></li>
+          <li><a href="#">Спецпредложения</a></li>
+        </ul>
+      </section>
+    </section>
+    <section class="footer-bottom">
+      <span>
+        © 2010–2019 Компания «Техномарт»Все права защищены
+      </span>
 
-        <section class="footer-social">
-          <ul>
-            <li class="social-button">
-              <a href="#"> <img src="img/vk.png" width="25" height="14" alt="вконтакте"></a>
-            </li>
-            <li class="social-button">
-              <a href="#"> <img src="img/facebook.png" width="12" height="22" alt="facebook"></a>
-            </li>
-            <li class="social-button">
-              <a href="#"> <img src="img/instagram.png" width="21" height="21" alt="instagram"></a>
-            </li>
-          </ul>
-        </section>
-        <div>
-          <p class="footer-copyright">
-            Обратная связь: <br>
-            <a href="mail@htmlacademy.ru">mail@htmlacademy.ru</a>
-          </p>
-          <p class="footer-copyright">
-            Разработано - <br>
-            <a href="https://htmlacademy.ru">https://htmlacademy.ru</a>
-          </p>
-        </div>
-      </div>
+      <section class="footer-social">
+        <ul>
+          <li class="social-button">
+            <a href="#"> <img src="img/vk.png" width="25" height="14" alt="вконтакте"></a>
+          </li>
+          <li class="social-button">
+            <a href="#"> <img src="img/facebook.png" width="12" height="22" alt="facebook"></a>
+          </li>
+          <li class="social-button">
+            <a href="#"> <img src="img/instagram.png" width="21" height="21" alt="instagram"></a>
+          </li>
+        </ul>
       </section>
+      <div>
+      <p class="footer-copyright">
+        Обратная связь: <br>
+        <a href="mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+      </p>
+      <p class="footer-copyright">
+        Разработано - <br>
+        <a href="https://htmlacademy.ru">https://htmlacademy.ru</a>
+      </p>
     </div>
+    </section>
+  </div>
   </footer>
   <section class="modal">
     <form class="mail-form" action="https://echo.htmlacademy.ru" method="post">
