--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="main-container-wrapper">
         <section class="main-menu">
           <a class="main-menu-logo">
-            <img src="img/logo-technomart.png" width="108" height="18" alt="ТЕХНОМАРТ">
+            <img src="img/logo-t.svg" width="108" height="18" alt="ТЕХНОМАРТ">
           </a>
           <ul class="main-menu-items">
             <li class="item-search">
@@ -52,15 +52,19 @@
       </div>
       <div class="main-info-wrapper">
         <section class="main-info">
-          <i>Интернет-магазин строительных материалов и инструментов для ремонта</i>
+          <i class="main-info-description">Интернет-магазин строительных материалов <br> и  инструментов для ремонта</i>
           <div class="main-info-container">
             <p class="main-contacts">
-              <span><a href="tel:+78125550555"><svg height="17" width="19">
+              <span>
+                <a href="tel:+78125550555">
+                  <svg height="20" width="20">
                     <use xlink:href="#phone"></use>
-                  </svg> +7(812)555-05-55 </a></span>
+                  </svg> +7&nbsp;(812)&nbsp;555-05-55 
+                </a>
+              </span>
                   
             </p>
-            <span>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</span>
+            <span class="main-contacts-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</span>
           </div>
           <p class="main-login">
             <a href="#">
@@ -68,7 +72,8 @@
                 <use xlink:href="#login"></use>
               </svg> Войти</a>
             <a href="#">
-              Регистрация</a>
+              Регистрация
+            </a>
           </p>
         </section>
       </div>
@@ -100,10 +105,11 @@
           <svg height="65" width="44">
             <use xlink:href="#materials"></use>
           </svg>
+          <span class="feature-item-block-new">NEW</span>
         </li>
         <li class="feature-item feature-item-drill">
           <div class="feature-item-block">
-            <h3>Инструменты</h3>
+            <h3>Инструмент</h3>
             <p>на все случаи</p>
           </div>
           <svg height="61" width="75">
@@ -174,7 +180,7 @@
               <img src="img/bfg3000.png" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
               <div>
                 <h3>Перфоратор BOSCH BFG 3000</h3>
-                <P>22500 Р.</P>
+                <p class="is-sale">22500 Р.</p>
                 <span>15500 Р.</span>
               </div>
             </a>
@@ -189,11 +195,12 @@
               </div>
             </a>
           </li>
-          <li class="products-item">
+          <li class="products-item is-not-sale">
             <a href="#" class="product-inner">
               <img src="img/bfg2000.png" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
               <div>
                 <h3>Перфоратор BOSCH BFG 2000</h3>
+                <p>0</p>
                 <span>12500 Р.</span>
               </div>
             </a>
@@ -203,7 +210,7 @@
     </section>
     <section class="firms">
       <div class="header-items">
-        <h2>популярные производители:</h2>
+        <h3>популярные производители:</h3>
         <p class="button">все производители</p>
       </div>
       <div class="firms-items-wrapper">
@@ -218,32 +225,36 @@
           <li class="firms-item"> <img src="img/metabo.png" width="220" height="145" alt="metabo"></li>
         </ul>
       </div>
-
     </section>
+  </div>
+    <div class="services-wrapper">
     <section class="services">
       <div class="services-title">
         <h2>СЕРВИСЫ</h2>
         <p>Хороший интернет-магазин отличается от плохого не только ценами!<br>
           Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
       </div>
+      <div class="services-form-wrapper">
       <div>
         <form class="services-form">
-          <input type="radio" name="service" id="delivery-field" checked>
-          <label for="delivery-field">Доставка</label>
-          <input type="radio" name="service" id="guarantee-field">
+          <input class="visually-hidden services-input-checkbox" type="radio" name="service" id="delivery-field" checked>
+          <label for="delivery-field ">Доставка</label>
+          <input class="visually-hidden services-input-checkbox" type="radio" name="service" id="guarantee-field">
           <label for="guarantee-field">Гарантия</label>
-          <input type="radio" name="service" id="credit-field">
+          <input class="visually-hidden services-input-checkbox" type="radio" name="service" id="credit-field">
           <label for="credit-field">Кредит</label>
         </form>
       </div>
 
       <div class="service-block service-block-delivery">
+        <div>
         <h3>ДОСТАВКА</h3>
         <p>Мы с удовольствием доставим ваш товар прямо <br>
           к вашему подъезду совершенно бесплатно!<br>
           Ведь мы неплохо заработаем, <br>
           поднимая его на ваш этаж!</p>
-        <img src="img/bigtruck.png" width="468" height="261" alt="грузовик">
+          <img class="service-block-delivery-img"src="img/bigtruck.png" width="468" height="261" alt="трак">
+        </div>
       </div>
       <div class="service-block service-block-guarantee visually-hidden">
         <h3>ГАРАНТИЯ</h3>
@@ -261,25 +272,29 @@
         <img src="img/credit.png" width="465" height="285" alt="кредит">
         <a href="#">отправить заявку</a>
       </div>
+    </div>
     </section>
-
+  </div>
+  <div class="company-info-wrapper">
     <section class="company-info">
       <div class="company-plus">
-        <h2>КОМПАНИЯ «Техномарт»</h2>
+        <h2 class="company-plus-title">КОМПАНИЯ «Техномарт»</h2>
+      <div>
         <p>
-          Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для <br>
-          ремонта и строительства не оставит равнодушными любителей сэкономить на <br>
+          Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для
+          ремонта и строительства не оставит равнодушными любителей сэкономить на
           гастарбайтерах.</p>
         <p>
           Мы можем доставить ваш товар в самые отдаленные точки России! <br>
           Техномарт работает со многими транспортными компаниями:
         </p>
+      </div>
         <ul class="company-partners-items">
-          <li class="company-partners-item"><b>Деловые линии</b></li>
-          <li class="company-partners-item"><b>Автотрейдинг</b></li>
-          <li class="company-partners-item"><b>ЖелДорЭкспедиция</b></li>
+          <li class="company-partners-item">Деловые линии</li>
+          <li class="company-partners-item">Автотрейдинг</li>
+          <li class="company-partners-item">ЖелДорЭкспедиция</li>
         </ul>
-        <a class="button" href="#">подробнее о компании</a>
+        <a class="button company-partners-items-button" href="#">подробнее о компании</a>
       </div>
 
       <div class="company-contacts">
@@ -317,7 +332,7 @@
           <ul class="products-wrapper">
             <li><a href="#">Материалы</a></li>
             <li><a href="#">Техника</a></li>
-            <li><a href="#">Инструменты</a></li>
+            <li><a href="#">Инструмент</a></li>
             <li><a href="#">Спецпредложения</a></li>
           </ul>
         </section>
@@ -325,31 +340,38 @@
     </div>
       <section class="footer-bottom">
         <div class="footer-bottom-wrapper">
-        <span>
-          © 2010–2019 Компания «Техномарт»Все права защищены
+        <span class="footer-bottom-title">
+          © 2010–2019 Компания «Техномарт» <br>Все права защищены
         </span>
 
         <section class="footer-social">
           <ul>
-            <li class="social-button">
-              <a href="#"> <img src="img/vk.png" width="25" height="14" alt="вконтакте"></a>
+            <li>
+              <a class="social-button" href="#">
+                 <svg height="14" width="25" class="icon">
+                <use xlink:href="#Shape"></use>
+              </svg></a>
             </li>
-            <li class="social-button">
-              <a href="#"> <img src="img/facebook.png" width="12" height="22" alt="facebook"></a>
+            <li >
+              <a class="social-button" href="#"> <svg height="22" width="12" class="icon">
+                <use xlink:href="#Shape (1)"></use>
+              </svg></a>
             </li>
-            <li class="social-button">
-              <a href="#"> <img src="img/instagram.png" width="21" height="21" alt="instagram"></a>
+            <li>
+              <a class="social-button" href="#"> <svg height="21" width="21" class="icon">
+                <use xlink:href="#icon-insta"></use>
+              </svg></a>
             </li>
           </ul>
         </section>
-        <div>
+        <div class="footer-copyright-info">
           <p class="footer-copyright">
             Обратная связь: <br>
             <a href="mail@htmlacademy.ru">mail@htmlacademy.ru</a>
           </p>
           <p class="footer-copyright">
             Разработано - <br>
-            <a href="https://htmlacademy.ru">https://htmlacademy.ru</a>
+            <a href="https://htmlacademy.ru">htmlacademy.ru</a>
           </p>
         </div>
       </div>
@@ -449,6 +471,15 @@
       <path
         d="M27.406 71.877c3.193 0 5.781-2.553 5.781-5.702 0-3.15-2.588-5.702-5.781-5.702-3.193 0-5.781 2.553-5.781 5.702s2.588 5.702 5.781 5.702zm17.438 0c3.193 0 5.781-2.553 5.781-5.702 0-3.15-2.588-5.702-5.781-5.702-3.193 0-5.781 2.553-5.781 5.702s2.588 5.702 5.781 5.702zM29.335 10.553l7.547 5.416a2.007 2.007 0 0 0 2.818-.487 2.066 2.066 0 0 0-.48-2.855l-2.373-1.703 9.436-5.02 4.628 11.85h4.347L49.214 2.276a2.037 2.037 0 0 0-1.177-1.166 1.995 1.995 0 0 0-1.643.107l-13.248 7.05-3.022-2.17a2.004 2.004 0 0 0-2.742.385l-8.481 10.65c-.17.182-.307.392-.405.62h5.106l5.733-7.2z"
         fill="#FFFFFF"></path>
+    </symbol>
+    <symbol viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg" id="icon-insta">
+      <path fill-rule="evenodd" clip-rule="evenodd" d="M3 0h15c1.65 0 3 1.35 3 3v15c0 1.65-1.35 3-3 3H3c-1.65 0-3-1.35-3-3V3c0-1.65 1.35-3 3-3zm11 10.5C14 8.57 12.43 7 10.5 7S7 8.57 7 10.5 8.57 14 10.5 14s3.5-1.57 3.5-3.5zM3 18V9h1.181A6.48 6.48 0 0 0 4 10.5a6.5 6.5 0 1 0 13 0 6.451 6.451 0 0 0-.181-1.5H18v9H3zM14 7h4V3h-4v4z" fill="#fff"></path>
+    </symbol>
+    <symbol viewBox="0 0 12 22" fill="none" xmlns="http://www.w3.org/2000/svg" id="Shape (1)">
+      <path d="M12 4V0H8a4 4 0 0 0-4 4v4H0v4h4v10h4V12h4V8H8V4h4z" fill="#fff"></path>
+    </symbol>
+    <symbol viewBox="0 0 26 15" fill="none" xmlns="http://www.w3.org/2000/svg" id="Shape">
+      <path d="M15.54 11.728c.92-.29 2.1 1.913 3.354 2.755.942.639 1.663.501 1.663.501l3.345-.047s1.747-.105.921-1.457c-.068-.112-.484-1.002-2.489-2.833-2.096-1.915-1.812-1.605.712-4.916 1.538-2.019 2.153-3.251 1.96-3.776-.185-.506-1.314-.374-1.314-.374l-3.768.025c-.367 0-.678.111-.82.483-.003.003-.598 1.562-1.391 2.886-1.677 2.802-2.346 2.952-2.623 2.776-.637-.406-.476-1.628-.476-2.497 0-2.716.416-3.849-.815-4.141-.411-.098-.711-.161-1.76-.17-1.34-.02-2.479 0-3.124.308-.428.209-.757.667-.557.693.25.033.811.15 1.112.55.386.517.374 1.677.374 1.677s.22 3.198-.52 3.594c-.508.272-1.203-.283-2.699-2.827-.763-1.301-1.34-2.74-1.34-2.74s-.112-.267-.314-.413a1.583 1.583 0 0 0-.578-.229L.817 1.58s-.538.015-.735.245c-.175.205-.015.627-.015.627s2.802 6.45 5.974 9.7c2.908 2.983 6.213 2.785 6.213 2.785h1.497s.452-.05.683-.292c.216-.225.206-.648.206-.648s-.03-1.977.9-2.268z" fill="#fff"></path>
     </symbol>
   </svg>
 
