--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <header class="main-header">
     <div class="main-container">
       <div class="main-container-wrapper">
-        <section class="main-menu">
+        <section class="main-menu center">
           <a class="main-menu-logo">
             <img src="img/logo-t.svg" width="108" height="18" alt="ТЕХНОМАРТ">
           </a>
@@ -51,7 +51,7 @@
         </section>
       </div>
       <div class="main-info-wrapper">
-        <section class="main-info">
+        <section class="main-info center">
           <i class="main-info-description">Интернет-магазин строительных материалов <br> и  инструментов для ремонта</i>
           <div class="main-info-container">
             <p class="main-contacts">
@@ -78,7 +78,7 @@
         </section>
       </div>
       <div class="main-navigation-wrapper">
-        <nav class="main-navigation">
+        <nav class="center">
           <ul class="site-navigation">
             <li><a href="#">Главная</a></li>
             <li><a href="#">Компания</a></li>
@@ -94,13 +94,13 @@
   </header>
 
   <main class="container">
-    <div class="container-wrapper">
+    <div class="container-wrapper center">
     <section class="features">
       <ul class="features-list">
         <li class="feature-item feature-item-materials">
           <div class="feature-item-block">
             <h3>Материалы</h3>
-            <p>на любой вкус</p>
+            <a class="feature-item-button">на любой вкус</a>
           </div>
           <svg height="65" width="44">
             <use xlink:href="#materials"></use>
@@ -110,7 +110,7 @@
         <li class="feature-item feature-item-drill">
           <div class="feature-item-block">
             <h3>Инструмент</h3>
-            <p>на все случаи</p>
+            <a class="feature-item-button">на все случаи</a>
           </div>
           <svg height="61" width="75">
             <use xlink:href="#drill"></use>
@@ -119,7 +119,7 @@
         <li class="feature-item feature-item-tractor">
           <div class="feature-item-block">
             <h3>Техника</h3>
-            <p>для стройки</p>
+            <a class="feature-item-button">для стройки</a>
           </div>
           <svg height="62" width="78">
             <use xlink:href="#tractor"></use>
@@ -128,7 +128,7 @@
         <li class="feature-item feature-item-truck">
           <div class="feature-item-block">
             <h3>Скидка 50%</h3>
-            <p>на 350 товаров</p>
+            <a class="feature-item-button">на 350 товаров</a>
           </div>
           <svg height="71" width="59">
             <use xlink:href="#truck"></use>
@@ -137,7 +137,7 @@
         <li class="feature-item feature-item-car">
           <div class="feature-item-block">
             <h3>Доставка</h3>
-            <p>бесплатно</p>
+            <a class="feature-item-button">бесплатно</a>
           </div>
           <svg height="63" width="78">
             <use xlink:href="#car"></use>
@@ -228,7 +228,7 @@
     </section>
   </div>
     <div class="services-wrapper">
-    <section class="services">
+    <section class="services center">
       <div class="services-title">
         <h2>СЕРВИСЫ</h2>
         <p>Хороший интернет-магазин отличается от плохого не только ценами!<br>
@@ -276,7 +276,7 @@
     </section>
   </div>
   <div class="company-info-wrapper">
-    <section class="company-info">
+    <section class="company-info center">
       <div class="company-plus">
         <h2 class="company-plus-title">КОМПАНИЯ «Техномарт»</h2>
       <div>
@@ -313,9 +313,11 @@
   <footer class="page-footer main-footer">
     <div class="page-footer-wrapper">
       <div class="page-info-wrapper">
-      <section class="footer-info">
+      <section class="footer-info center">
         <section class="footer-contacts">
-          <img src="img/footer-logo.png" width="220" height="68" alt="логотип">
+          <a class="main-menu-logo">
+            <img src="img/big-logo.svg" width="138" height="23" alt="ТЕХНОМАРТ">
+          </a>
           <p>
             г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br>
             +7 (812) 555-05-55
@@ -339,7 +341,7 @@
       </section>
     </div>
       <section class="footer-bottom">
-        <div class="footer-bottom-wrapper">
+        <div class="footer-bottom-wrapper center">
         <span class="footer-bottom-title">
           © 2010–2019 Компания «Техномарт» <br>Все права защищены
         </span>
